[tool.poetry]
name = "hangman-game"
version = "v0.0.1"
description = "REST API hangman game"
authors = ["Garuso Cruz <garusotec@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
fastapi = {extras = ["all"], version = "^0.89.1"}
uvicorn = {extras = ["standard"], version = "^0.20.0"}

[tool.poetry.dev-dependencies]
black = "^22.3.0"

[tool.poetry.group.dev.dependencies]
pre-commit = "^3.0.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
